# notelens

./: .gitignore  README.md  build-macos-app.sh  components.json  dev.sh  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  router.ts
src-python/: .env.example  .python-version  README.md  pyproject.toml
src-python/notelens/: main.py  test_data.json
src-python/notelens/core/: config.py  database.py  message_bus.py  models.py  setup_manager.py  watcher.py
src-python/notelens/lib/: rembed0.dylib
src-python/notelens/notes/: service.py  tracker.py
src-python/notelens/notes/parser/: exceptions.py  parser.py
src-python/notelens/websocket/: models.py  server.py
src-python/notelens/websocket/handlers/: base.py  ping.py  search.py  setup.py
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: WebSocketTest.tsx
src/components/onboarding/: ProgressScreen.tsx  StageItem.tsx  Welcome.tsx
src/components/search/: SearchPage.tsx  SearchResult.tsx
src/components/ui/: ProgressBar.tsx
src/hooks/: useOnboarding.ts  useSearch.ts  useWebSocket.ts
src/lib/: store.ts  utils.ts  websocket.ts
src/routes/: __root.tsx  index.tsx
src/routes/onboarding/: index.tsx  progress.tsx
src/routes/search/: index.tsx
src/types/: onboarding.ts  router.ts  search.ts
