[tool.poetry]
name = "notelens"
version = "0.1.0"
description = "Semantic search for Apple Notes"
authors = ["Max Beyer <max.beyer09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
sqlite-vec = "^0.1.6"
pydantic = "^2.10.4"
tqdm = "^4.67.1"
numpy = "^2.2.1"
watchdog = "^6.0.0"
websockets = "^14.1"
pyinstaller = "^6.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
